--- a/app/product-list/product-list.html
+++ b/app/product-list/product-list.html
@@ -1,3 +1,13 @@
 <div class="container">
-	
+	<h3>Products</h3>
+	<ul class="list-group">
+		<li ng-repeat="product in list.products" class="list-group-item">
+			<p>Title: {{ product.title }}</p>
+			<p>Description: {{ product.description }}</p>
+			<p>Price: {{ product.price }}</p>
+			<p>Inventory: {{ product.inventory_qty }}</p>
+			<p>Categories: {{ product.categories.join(',').trim() }}</p>
+			<p><a ui-sref="productDetail({id:product.id})">See Details</a></p>
+		</li>
+	</ul>
 </div>
