directive, component, filters, product list and detail page with JWT auth

--- a/app/home.html
+++ b/app/home.html
@@ -1,5 +1,6 @@
 <div class="well">
-	<form id="login-form" name="login-form">
+	<login></login>
+	<!-- <form id="login-form" name="login-form">
 		<alert type="danger" ng-show="error">
 		    {{ error }}
 		</alert>
@@ -12,5 +13,5 @@
 		    <input type="password" ng-model="credentials.password" class="form-control" id="password" placeholder="demo">
 		</div>
 		<button type="submit" class="btn btn-primary" ng-click="logIn.sendLogin(credentials)">Log In</button>
-	</form>
+	</form> -->
 </div>
