--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Custom Solution for SiriusIQMobile</title>
+  <title>Northwind Traders</title>
   <link type="text/css" rel="stylesheet" href="https://bootswatch.com/flatly/bootstrap.min.css"/>
   <script src="/angular/angular.js"></script>
   <script src="/angular-ui-router/release/angular-ui-router.js"></script>
@@ -18,7 +18,7 @@
 <body ng-app="app">
 	<div class="container" ng-controller="MainCtrl">
 	
-  	<h1>Custom Solution for SiriusIQMobile</h1>
+  	<h1>Northwind Traders</h1>
     <ul class="nav nav-tabs" style="margin-bottom:10px">
         
         <li ng-show="!loggedIn" ui-sref-active="active">
